update cliet add main and test agent.py and dockerignore

--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -4,10 +4,9 @@ services:
       context: .  # Cesta k priečinku s Dockerfile
     container_name: DRTA-Client
     volumes:
-      - ./form.py:/app/form.py  # Mapovanie form.py
-      - ./form_data.json:/app/form_data.json  # Mapovanie form_data.json
+      - .:/app  # Mapovanie celého priečinka do kontajnera
     working_dir: /app
     stdin_open: true  # Povoliť štandardný vstup
     tty: true         # Povoliť TTY
-    command: ["python", "form.py"]  # Spustiť formulár
+    command: ["python", "main.py"]  # Spustiť formulár
     restart: unless-stopped
