--- a/client/dockerfile
+++ b/client/dockerfile
@@ -5,11 +5,10 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy necessary files
-COPY form.py /app/
-COPY form_data.json /app/
+COPY . /app
 
 # Install dependencies (ak sú potrebné)
 RUN pip install --no-cache-dir -r requirements.txt || echo "No dependencies specified"
 
 # Default command
-CMD ["python", "form.py"]
+ENTRYPOINT ["python", "main.py"]
