fix: update docker-compose to specify build context

--- a/client/docker-compose.yml
+++ b/client/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   drta-client:
-    build:
+    build: .
     container_name: DRTA-Client
     volumes:
       - .:/app  # Map the entire directory to the container
