--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,18 +1,22 @@
 FROM python:3.11-alpine
 
-# Nastavenie pracovného adresára
+# Set working directory
 WORKDIR /app
 
-RUN pip install --upgrade pip
+# Install necessary system dependencies
+RUN apk add --no-cache gcc musl-dev libffi-dev openssl-dev
 
-# Inštalácia závislostí
+# Install Python dependencies
 COPY requirements.txt .
-RUN cat requirements.txt
-RUN pip install --no-cache-dir -v -r requirements.txt --root-user-action=ignore
+RUN pip install --no-cache-dir -r requirements.txt
 
-# Kopírovanie aplikácie
+# Copy application code
 COPY server.py .
+COPY cert.pem key.pem /app/
 
-# Spustenie aplikácie
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
+# Add a non-root user
+RUN adduser -D appuser
+USER appuser
 
+# Run the application
+CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "key.pem", "--ssl-certfile", "cert.pem"]
