--- a/server/dockerfile
+++ b/server/dockerfile
@@ -1,22 +1,18 @@
 FROM python:3.11-alpine
 
-# Set working directory
+# Nastavenie pracovného adresára
 WORKDIR /app
 
 # Install necessary system dependencies
 RUN apk add --no-cache gcc musl-dev libffi-dev openssl-dev
+RUN pip install --upgrade pip
 
-# Install Python dependencies
+# Inštalácia závislostí
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --no-cache-dir -v -r requirements.txt --root-user-action=ignore
 
-# Copy application code
+# Kopírovanie aplikácie
 COPY server.py .
-COPY cert.pem key.pem /app/
-
-# Add a non-root user
-RUN adduser -D appuser
-USER appuser
 
 # Run the application
 CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "key.pem", "--ssl-certfile", "cert.pem"]
