--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -6,7 +6,10 @@ services:
       context: .  # Cesta k priečinku s Dockerfile
     container_name: totp-server
     ports:
-      - "127.0.0.1:8443:443"  # Presmerujte SSL port na lokálnu adresu
+      - "8443:443"
+      - "8000:8000"
     env_file:
       - .env
+    volumes:
+      - ./certs:/certs  # Certifikáty v koreňovom priečinku
     restart: unless-stopped
