--- a/server/dockerfile
+++ b/server/dockerfile
@@ -15,4 +15,5 @@ RUN pip install --no-cache-dir -v -r requirements.txt --root-user-action=ignore
 COPY server.py .
 
 # Run the application
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "key.pem", "--ssl-certfile", "cert.pem"]
+CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "443", "--ssl-keyfile", "cert.pem", "--ssl-certfile", "key.pem"]
+
