feat: update Docker configuration to map entire directory and copy necessary files

--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -11,5 +11,6 @@ services:
     env_file:
       - .env
     volumes:
-      - ./certs:/certs  # Certifikáty v koreňovom priečinku
+      - .:/app  # Map the entire directory to the container
+      - ./certs:/certs
     restart: unless-stopped
