feat: update Docker configuration and server setup for improved functionality and certificate handling

--- a/server/.dockerignore
+++ b/server/.dockerignore
@@ -9,8 +9,11 @@
 *.tmp
 
 # Ignorovať citlivé údaje
-.env
+
 
 # Ignorovať Docker súbory, ak nie sú potrebné v kontajneri
 docker-compose.yml
 dockerfile
+
+#README.md
+README.md
