--- a/client/dockerfile
+++ b/client/dockerfile
@@ -5,9 +5,10 @@ FROM python:3.9-slim
 WORKDIR /app
 
 # Copy necessary files
-COPY . /app
+COPY . .
 
 # Install dependencies (ak sú potrebné)
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt || echo "No dependencies specified"
 
 # Default command
