--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -11,3 +11,9 @@ services:
     env_file:
       - .env
     restart: unless-stopped
+    networks:
+      - traefik-net
+
+networks:
+  traefik-net:
+    external: true
