--- a/server/dockerfile
+++ b/server/dockerfile
@@ -7,7 +7,15 @@ WORKDIR /app
 COPY . .  
  
 # Install necessary system dependencies
-RUN apk add --no-cache gcc musl-dev libffi-dev openssl-dev
+# Install build tools and SQLCipher
+RUN apk add --no-cache \
+    gcc \
+    musl-dev \
+    libffi-dev \
+    openssl-dev \
+    sqlcipher \
+    sqlcipher-dev \
+    py3-pip
 RUN pip install --upgrade pip
 
 # Inštalácia závislostí
