feat: add debug step to print TOTP_SECRET in GitHub Actions workflow

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -18,4 +18,8 @@ jobs:
       - name: Setup .env file
         run: |
           echo "TOTP_SECRET=${{ secrets.TOTP_SECRET }}" > server/.env
+      
+      - name: Debug secrets
+        run: echo "TOTP_SECRET=${{ secrets.TOTP_SECRET }}"
+        
 
